--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,24 @@
-name: End-to-end tests
-on: push
+name: Cypress Tests
+on: [push]
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Instalar dependências
         run: npm ci
-      # Se precisar rodar um servidor, descomente e ajuste as linhas abaixo:
-      # - name: Iniciar servidor
-      #   run: npm start &
-      # - name: Esperar servidor
-      #   uses: jakejarvis/wait-action@v0.1.0
-      #   with:
-      #     url: 'http://localhost:3000'
-      - name: Cypress run (Cloud)
+      - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          start: npm start
+          wait-on: 'http://localhost:3000'
           record: true
+          parallel: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
